# westlean

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: build.sh  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/: intro.md
docs/docs/algorithms/: anti-unification.mdx  exalg.mdx  fivatech.mdx  k-testable.mdx  overview.md  roadrunner.mdx
docs/docs/api/: serialization.md  tracer.md
docs/src/components/: AlgorithmDemo.tsx  AntiUnifPhaseViz.tsx  AntiUnifTreeView.tsx  ClassificationPanel.tsx  DOMTreeViz.tsx  ExalgPhaseViz.tsx  PatternCatalog.tsx  PositionMapTable.tsx  SequenceAlignment.tsx  SlotInspector.tsx  StructureView.tsx  TokenStream.tsx  TracePlayer.tsx  TreeAlgoPhaseViz.tsx  UFREView.tsx
docs/src/hooks/: usePyodide.ts
docs/static/: pyodideWorker.js  westlean-0.1.0-py3-none-any.whl
tests/: conftest.py  test_anti_unification.py  test_content_model.py  test_exalg.py  test_fivatech.py  test_harness.py  test_renderer.py  test_roadrunner.py  test_serialization.py  test_strategies.py  test_tracer.py  test_tree_automata.py
westlean/: child_alignment.py  compat.py  content_model.py  data_schema.py  diagnose.py  evaluation.py  field_strategies.py  harness.py  protocol.py  renderer.py  serialization.py  strategies.py  template_ast.py  tracer.py
westlean/algorithms/: anti_unification.py  exalg.py  fivatech.py  roadrunner.py  tracing_anti_unification.py  tracing_exalg.py  tracing_fivatech.py  tracing_roadrunner.py  tracing_tree_automata.py  tree_automata.py
